fix board overflow bug

--- a/src/main.scss
+++ b/src/main.scss
@@ -30,6 +30,7 @@ html {
   overflow-wrap: break-word;
   -webkit-tap-highlight-color: transparent;
   text-size-adjust: 100%;
+  overflow-x: hidden;
 }
 
 body {
@@ -38,6 +39,7 @@ body {
   margin: 0;
   color: $color-black;
   font-family: sans-serif;
+  overflow-x: hidden;
 }
 
 #app {
@@ -84,18 +86,23 @@ main {
   align-items: center;
   justify-content: center;
   padding: var(--game-board-padding) 0;
-  visibility: hidden;
+
+  &[hidden] {
+    display: none;
+  }
 }
 
 .game-board__guesses {
   display: grid;
   grid-gap: var(--tile-gap);
   grid-template-rows: repeat(#{$num-guesses}, 1fr);
+  width: 100%;
+  max-width: var(--game-board-width);
 }
 
 .game-board__guess {
   display: grid;
-  width: var(--game-board-width);
+  width: 100%;
   height: var(--tile-size);
   grid-gap: var(--tile-gap);
   grid-template-columns: repeat(#{$letters-per-word}, 1fr);
@@ -103,9 +110,9 @@ main {
 
 .game-board__tile {
   position: relative;
-  width: 0;
-  height: 100%;
-  padding-left: 100%;
+  width: 100%;
+  height: 0;
+  padding-bottom: 100%;
 }
 
 .tile {
